# hello-tonic

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: hello.proto
src/: client.rs  server.rs
