[package]
name = "hello-tonic"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.5.0"
prost = "0.8.0"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.5.0"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"
